--- a/hw3.html
+++ b/hw3.html
@@ -227,6 +227,36 @@ quantile(B.lis, probs = c(0.025,0.975))#percentile bootstrap confidence interval
 <pre><code>##     2.5%    97.5% 
 ## 1.223886 4.740056
 </code></pre>
+<h2 id="sec:estimation-for-binary-outcome-show-your-code-and-answer-by-r-markdown">Estimation for binary outcome. Show your code and answer by R Markdown.</h2>
+<h3 id="sec:q2-a">Q2-(A)</h3>
+<pre><code class="language-r">According to the following model, generate variable \(Y\):
+
+$$
+Y \sim Bern(p_y), \quad p_y = \text{expit}(-4 - A + 3L)
+$$
+
+
+
+
+set.seed(123)
+expit &lt;- function(x) 1 / (1 + exp(-x))
+p_L &lt;- expit(1)            # L
+L &lt;- rbinom(1000, 1, p_L)
+p_A &lt;- expit(-1 + 3*L)     # A 
+A &lt;- rbinom(1000, 1, p_A)
+p_Y &lt;- expit(-4 - A + 3*L) # Y
+Y &lt;- rbinom(1000, 1, p_Y)
+
+df2 &lt;- data.frame(L = L, A = A, Y = Y)
+head(df2, 5)
+</code></pre>
+<pre><code>## Error in parse(text = input): &lt;text&gt;:1:11: unexpected symbol
+## 1: According to
+##               ^
+</code></pre>
+<h3 id="sec:q2-b-suppose-l-represents-a-subject-s-age-l-0-if-age-lt-65-l-1-o-w-a-represents-whether-a-subject-is-in-the-control-group-a-0-or-the-treatment-group-a-1-and-represents-whether-a-subject-is-dead-y-1-or-alive-y-0-please-derive-the-estimate-of-causal-effect-based-on-standardization-method-under-odds-ratio-scale-both-point-and-95-ci">Q2-(B) Suppose L represents a subject’s age (L = 0 if age &lt; 65, L = 1 o.w.), A represents whether a subject is in the control group (A = 0) or the treatment group (A = 1), and  represents whether a subject is dead (Y = 1) or alive (Y = 0). Please derive the estimate of causal effect based on standardization method under odds ratio scale (both point and 95% CI).</h3>
+<h3 id="sec:q2-c-please-derive-the-estimate-of-causal-effect-based-on-regression-based-estimator-under-odds-ratio-scale-both-point-and-95-ci">Q2-(C)Please derive the estimate of causal effect based on regression-based estimator under odds ratio scale (both point and 95% CI).</h3>
+<h3 id="sec:q2-d-please-derive-the-estimate-of-causal-effect-based-on-ipw-estimator-under-odds-ratio-scale-both-point-and-95-ci">Q2-(D)Please derive the estimate of causal effect based on IPW estimator under odds ratio scale (both point and 95% CI).</h3>
 <pre><code class="language-r">library(markdown)
 knitr::spin(&quot;hw3.r&quot;, knit = TRUE)
 </code></pre>
@@ -237,17 +267,21 @@ knitr::spin(&quot;hw3.r&quot;, knit = TRUE)
 ## 
 ## processing file: hw3.Rmd
 </code></pre>
-<pre><code>## 1/11                   
-## 2/11 [unnamed-chunk-11]
-## 3/11                   
-## 4/11 [unnamed-chunk-12]
-## 5/11                   
-## 6/11 [unnamed-chunk-13]
-## 7/11                   
-## 8/11 [unnamed-chunk-14]
-## 9/11                   
-## 10/11 [unnamed-chunk-15]
-## 11/11
+<pre><code>## 1/15                   
+## 2/15 [unnamed-chunk-15]
+## 3/15                   
+## 4/15 [unnamed-chunk-16]
+## 5/15                   
+## 6/15 [unnamed-chunk-17]
+## 7/15                   
+## 8/15 [unnamed-chunk-18]
+## 9/15                   
+## 10/15 [unnamed-chunk-19]
+## 11/15                   
+## 12/15 [unnamed-chunk-20]
+## 13/15                   
+## 14/15 [unnamed-chunk-21]
+## 15/15
 </code></pre>
 <pre><code>## output file: hw3.md
 </code></pre>
